docs/deployment_guide/config/ingress_ttk.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ttk
  annotations:
    kubernetes.io/ingress.class: kong
    # konghq.com/strip-path: "true"
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    # konghq.com/plugins: ttk-rewrite
spec:
  rules:
  # This is impossible for now - ttk doesn't like not being at /
    # - http:
    #     paths:
          # pig-ttk
          # - path: /pig/api/(.*)
          #   backend:
          #     serviceName: pig-ttk-ml-testing-toolkit-backend
          #     servicePort: 5050
          # - path: /pig/socket.io/
          #   backend:
          #     serviceName: pig-ttk-ml-testing-toolkit-backend
          #     servicePort: 5050
          # - path: /pig/(.*)
          #   backend:
          #     serviceName: pig-ttk-ml-testing-toolkit-frontend
          #     servicePort: 6060
    
    - host: pig-ttk.alpha.moja-lab.live
      http:
        paths:
          - path: /api
            backend:
              serviceName: pig-ttk-ml-testing-toolkit-backend
              servicePort: 5050 
          - path: /
            backend:
              serviceName: pig-ttk-ml-testing-toolkit-frontend
              servicePort: 6060
          - path: /socket.io/
            backend:
              serviceName: pig-ttk-ml-testing-toolkit-backend
              servicePort: 5050
    - host: dog-ttk.alpha.moja-lab.live
      http:
        paths:
          - path: /api
            backend:
              serviceName: dog-ttk-ml-testing-toolkit-backend
              servicePort: 5050 
          - path: /
            backend:
              serviceName: dog-ttk-ml-testing-toolkit-frontend
              servicePort: 6060
          - path: /socket.io/
            backend:
              serviceName: dog-ttk-ml-testing-toolkit-backend
              servicePort: 5050
    - host: dog-ttk-backend.alpha.moja-lab.live
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: dog-ttk-ml-testing-toolkit-backend
              servicePort: 5000
